edit text to show different

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Try to add you score</h1>
-    <p class="lead">You may add your socore to see how your grade will?</p>
+    <h1>Welcome to the updated frontend!</h1>
+    <p>Here's the new content that will be shown after deployment.</p>
   </div>
 </div>
 <div class="row">
